src/components/pages/home/sections/cover.section.scss
@use '@/styles/abstracts/variables' as var;
@use '@/styles/abstracts/mixins' as mixin;

.cover-section {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;

  &__container {
    @include mixin.container();
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1200px;
  }

  &__background {
    position: relative;
    width: 1200px;
    height: 890px;
    transform: translateY(-60px);
    margin-bottom: 60px;
  }

  &__background-image {
    object-fit: contain;
    object-position: center;
  }

  &__title-wrapper {
    display: flex;
    flex-direction: column;
    gap: 16px;
    text-align: center;
  }

  &__button-wrapper {
    position: absolute;
    top: 380px;
  }

  &__button {
    align-items: center;
  }

  &__title {
    font-size: 225px;
    font-weight: 400;
    line-height: 1;
    text-transform: uppercase;
    color: var.$text-color;
  }

  &__subtitle {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    column-gap: 24px;
    row-gap: 8px;

    font-size: 100px;
    font-weight: 400;
    line-height: 1;
    text-transform: uppercase;
  }

  &__subtitle-red {
    color: var.$primary-color;
  }

  &__red-line {
    position: absolute;
    z-index: 5;
    bottom: 40px;
    left: 50%;
    display: flex;
    align-items: center;
    width: 100vw;
    height: 100px;
    overflow: hidden;
    background-color: var.$primary-color;
    transform: translateX(-50%) rotate(-2deg);
  }

  &__red-line-text {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    white-space: nowrap;
    animation: marquee 20s linear infinite;
  }

  &__red-line-text-span {
    padding: 0 1rem;
    font-size: 30px;
    text-transform: uppercase;
    color: white;
  }
}

@keyframes marquee {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-100%);
  }
}

@include mixin.respond('tablet') {
  .cover-section {
    &__title {
      font-size: 160px;
      text-align: center;
    }

    &__subtitle {
      text-align: center;
      font-size: 64px;
    }

    &__background {
      width: 728px;
      height: 500px;
      margin-bottom: 50px;
      transform: translateY(-30px);
    }

    &__background-image {
      width: 728px;
      height: 540px;
    }

    &__button-wrapper {
      top: 280px;
    }

    &__red-line {
      bottom: 60px;
      height: 77px;
    }
  }
}

@include mixin.respond('mobile') {
  .cover-section {
    @include mixin.container();
    gap: 16px;

    &__container {
      gap: 10px;
      order: 1;
    }

    &__button-wrapper {
      position: relative;
      top: auto;
      order: 2;
      width: 100%;
      margin: 0;
    }

    &__button {
      width: 100%;
    }

    &__background {
      order: 3;
      width: 698px;
      height: 580px;
      margin-bottom: 0;
      transform: none;
    }

    &__title {
      font-size: 88px;
      text-align: center;
    }

    &__subtitle {
      font-size: 36px;
    }

    &__red-line {
      bottom: 10px;
      height: 77px;
    }
  }
}

